--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,6 +78,25 @@ body {
   }
 } */
 
+/* .visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+} */
+
+.visually-hidden {
+  position: absolute;
+  left: 300px;
+  z-index: -100000;
+}
+
 .custom-box-shadow {
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.14);
 }
@@ -190,8 +209,8 @@ body {
 }
 
 input:-webkit-autofill,
-input:-webkit-autofill:hover, 
-input:-webkit-autofill:focus, 
-input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px white inset !important;
 }
